--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Sentimyzer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-  
+  <main class="row">
+    <div class="col s6 presentation">
+      <h1 class="app-title white-text">Sentimyzer</h1>
+      <p >
+        <img src="src/images/azure.png" class="azure-logo" alt="Microsoft azure logo">
+      </p>
+    </div>
+    <div class="col s6 work"></div>
+  </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="src/script.js"></script>
 </body>
 </html>
