added jquery in the dependency graph

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="shortcut icon" href="src/images/favicon.ico">
   <meta name="msapplication-config" content="src/images/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
@@ -52,6 +52,7 @@
       </form>
     </div>
   </main>
+  <script src="src/vendors/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="src/script.js"></script>
 </body>
